# espresso-logic-minimizer

./: .gitignore  autogen.sh  config.h.in  configure.ac  gitignore
doc/: hw1-espresso-problem.txt  quick start.html
src/: black_white.c  cofactor.c  cols.c  compl.c  contain.c  cubestr.c  cvrin.c  cvrm.c  cvrmisc.c  cvrout.c  dominate.c  equiv.c  espresso.c  essen.c  essentiality.c  exact.c  expand.c  gasp.c  gimpel.c  hack.c  indep.c  irred.c  main.c  map.c  matrix.c  mincov.c  opo.c  pair.c  part.c  primes.c  reduce.c  rows.c  set.c  setc.c  sharp.c  sigma.c  signature.c  sminterf.c  solution.c  sparse.c  (+3 more)
